# learn-ocaml

arith-machine/: .ocamlinit  readme.md
arith-machine/src/: .merlin  arith.ml  dune  ex_modules.ml  monads_by_hand.ml  monads_via_core.ml
arith-machine/test/: .merlin  dune  test.ml  test_arith.ml
parse-and-lex/: dune-project
parse-and-lex/app/: .merlin  cli.ml  dune
parse-and-lex/src/: .merlin  ast.ml  dune  lexer.mll  myparser.ml  parser.mly  util.ml
